if(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
	add_executable(Battle-City "Battle-City-CMake.cpp" "Battle-City-CMake.h")
	target_compile_features(Battle-City PRIVATE cxx_std_17)
	target_link_libraries(Battle-City PRIVATE SFML::Window SFML::System SFML::Graphics SFML::Main)
else()
	add_executable(Battle-City "Battle-City-CMake.cpp" "Battle-City-CMake.h")
	target_compile_features(Battle-City PRIVATE cxx_std_17)
	target_link_libraries(Battle-City PRIVATE SFML::Window SFML::System SFML::Graphics SFML::Main)
endif()